--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,6 @@
-
+.profile-picture {
+  width: 150px; /* Adjust size as needed */
+  height: 150px; /* Adjust size as needed */
+  border-radius: 50%;
+  object-fit: cover;
+}
