--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,8 @@
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
