--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,16 @@
   </head>
     {%- include head.html -%}
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+  </head>
   <body>
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" />
+        <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" />
         {% endif %}
+        <h1>{{ site.title }}</h1>
+        <p>{{ site.description }}</p>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
