--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
         {% if site.logo %}
         <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" />
         {% endif %}
-        <h1>{{ site.title }}</h1>
-        <p>{{ site.description }}</p>
+<!--         <h1>{{ site.title }}</h1>
+        <p>{{ site.description }}</p> -->
 
 <!--         <p>{{ site.description | default: site.github.project_tagline }}</p>
  -->
