--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
     <![endif]-->
     {% include head-custom.html %}
   
-    {%- include head.html -%}
-    
+<!--     {%- include head.html -%}
+     -->
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
   </head>
   <body>
