--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,3 +4,9 @@
   border-radius: 50%;
   object-fit: cover;
 }
+
+.wrapper {
+  max-width: 800px; /* Adjust the max-width to your preference */
+  margin: 0 auto; /* This centers the wrapper horizontally */
+  padding: 0 20px; /* Optional: Add padding to the sides for spacing */
+}
