--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,7 +5,7 @@
   object-fit: cover;
 }
 
-.wrapper {
+.wrapper1 {
   max-width: 800px; /* Adjust the max-width to your preference */
   margin: 0 auto; /* This centers the wrapper horizontally */
   padding: 0 20px; /* Optional: Add padding to the sides for spacing */
