--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -12,6 +12,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
+  margin-top: 400px
+  margin-right: 300px
 }
 
 p, ul, ol, table, pre, dl {
