--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,22 +11,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     {% include head-custom.html %}
-    <style>
-      body {
-        background-color: #fff;
-        padding: 50px;
-        font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        color: #727272;
-        font-weight: 400;
-      }
-
-      /* Add more CSS rules as needed */
-    </style>
+    
 <!--     {%- include head.html -%}
      -->
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
   </head>
-  <body>
+  <body style='margin-left: 500px !important;'>
+    
     <div class="wrapper1">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
