--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,11 +45,10 @@
         </ul>
         {% endif %}
       </header>
-      <section>
+      <section style="bottom: auto !important; margin-bottom: 0px !important; margin-top: 400px !important; right: auto !important; margin-right: 300px !important;" >_</section>
 
-      {{ content }}
 
-      </section>
+
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
