--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,12 @@
         </ul>
         {% endif %}
       </header>
-      <section style="bottom: auto !important; margin-bottom: 0px !important; margin-top: 0px !important; right: auto !important; margin-right: 300px !important;" >_</section>
+      <section style="bottom: auto !important;
+        margin-bottom: auto !important;
+        margin-top: 100px !important;
+        right: auto !important;
+        margin-right: 300px !important;" 
+        >_</section>
 
 
 
