--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,47 @@
         margin-top: 100px !important;
         right: auto !important;
         margin-right: 300px !important;" 
-        >_</section>
+        <p><a href="./another-page.html">Link to another page</a>.</p>
+        <a href="./another-page.html">Link to another page</a>
+        .
+        <p><a href="./another-page.html">Link to another page</a>.</p>
+        <h1 id="about">About</h1>
+        <p>Adaptable Project Manager transitioning into Software Engineering and Machine Learning. Proven leadership in optimizing processes and driving strategic initiatives. Eager to apply strong analytical skills and embrace continuous learning to excel in tech-driven environments.</p>
+        Adaptable Project Manager transitioning into Software Engineering and Machine Learning. Proven leadership in optimizing processes and driving strategic initiatives. Eager to apply strong analytical skills and embrace continuous learning to excel in tech-driven environments.
+        <p>Adaptable Project Manager transitioning into Software Engineering and Machine Learning. Proven leadership in optimizing processes and driving strategic initiatives. Eager to apply strong analytical skills and embrace continuous learning to excel in tech-driven environments.</p>
+        <h2 id="projects">Projects</h2>
+        <h3 id="definition-lists-can-be-used-with-html-syntax">Definition lists can be used with HTML syntax.</h3>
+        <dl>
+        <dt>Name</dt>
+        <dd>Godzilla</dd>
+        <dt>Born</dt>
+        <dd>1952</dd>
+        <dt>Birthplace</dt>
+        <dd>Japan</dd>
+        <dt>Color</dt>
+        <dd>Green</dd>
+        </dl>
+        <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>Long, single-line code blocks should not wrap. They should horizontally scroll if they are too long. This line should be long enough to demonstrate this.
+        </code></pre></div></div>
+        <div class="highlight"><pre class="highlight"><code>Long, single-line code blocks should not wrap. They should horizontally scroll if they are too long. This line should be long enough to demonstrate this.
+        </code></pre></div>
+        <pre class="highlight"><code>Long, single-line code blocks should not wrap. They should horizontally scroll if they are too long. This line should be long enough to demonstrate this.
+        </code></pre>
+        <div class="highlight"><pre class="highlight"><code>Long, single-line code blocks should not wrap. They should horizontally scroll if they are too long. This line should be long enough to demonstrate this.
+        </code></pre></div>
+        <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>Long, single-line code blocks should not wrap. They should horizontally scroll if they are too long. This line should be long enough to demonstrate this.
+        </code></pre></div></div>
+        <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>The final element.
+        </code></pre></div></div>
+        <div class="highlight"><pre class="highlight"><code>The final element.
+        </code></pre></div>
+        <pre class="highlight"><code>The final element.
+        </code></pre>
+        <div class="highlight"><pre class="highlight"><code>The final element.
+        </code></pre></div>
+        <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>The final element.
+        </code></pre></div></div>
+      </section>
 
 
 
