--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -124,7 +124,7 @@ kbd {
 header {
   width:270px;
   float:left;
-  position:static;
+  position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
