--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     
     <div class="wrapper1">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
         {% if site.logo %}
         <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" />
         {% endif %}
