--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,14 @@
 
 <!--         <p>{{ site.description | default: site.github.project_tagline }}</p>
  -->
+        <a href="https://www.linkedin.com/in/cspeterai/">
+        <img src="img/1218170_linkedin_icon.png" alt="LinkedIn profile">
+        </a>
+
+        <a href="mailto:cspeteai@outlook.com">
+        <img src="img/email.png" alt="Email me">
+        </a>
+        
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
