--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,11 +30,11 @@
 <!--         <p>{{ site.description | default: site.github.project_tagline }}</p>
  -->
         <a href="https://www.linkedin.com/in/cspeterai/">
-        <img src="img/1218170_linkedin_icon.png" alt="LinkedIn profile">
+        <img src="assets/img/1218170_linkedin_icon.png" alt="LinkedIn profile">
         </a>
 
         <a href="mailto:cspeteai@outlook.com">
-        <img src="img/email.png" alt="Email me">
+        <img src="assets/img/email.png" alt="Email me">
         </a>
         
         {% if site.github.is_project_page %}
