--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,15 @@
         <a href="mailto:cspeteai@outlook.com">
         <img src="assets/img/email.png" alt="Email me">
         </a>
-        
+
+        <a href="https://github.com/peterjps">
+        <img src="assets/img/github-mark.png" alt="Github me">
+        </a>
+
+        <a href="https://discordapp.com/users/@01_peter_">
+        <img src="assets/img/icon_clyde_black_RGB.png" alt="Discord me">
+        </a>
+
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
