--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,6 +22,10 @@
   color: #333; /* Optional: change the color */
 }
 
+.social-icon {
+    width: 30px;  height: 30px;  margin-right: 10px; 
+}
+
 body {
   padding: 50px; /* Adjust the padding around the body content */
 }
