--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         </a>
 
         <a href="https://github.com/peterjps">
-        <img src="assets/img/github-mark-white.png" alt="Github me" width="30" height="30">
+        <img src="assets/img/github-mark.png" alt="Github me" width="30" height="30">
         </a>
 
         <a href="https://discordapp.com/users/@01_peter_">
