--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,13 +45,13 @@
         <img src="assets/img/icon_clyde_black_RGB.png" alt="Discord me" width="30" height="30">
         </a>
 
-        {% if site.github.is_project_page %}
+<!--         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
-
-        {% if site.github.is_user_page %}
+ -->
+<!--         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        {% endif %} -->
 
         {% if site.show_downloads %}
         <ul class="downloads">
