--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,23 +28,24 @@
         <p>{{ site.description }}</p> -->
 
 <!--         <p>{{ site.description | default: site.github.project_tagline }}</p>
- -->
-        <a href="https://www.linkedin.com/in/cspeterai/">
-        <img src="assets/img/1218170_linkedin_icon.png" alt="LinkedIn profile" width="30" height="30">
-        </a>
-
-        <a href="mailto:cspeteai@outlook.com">
-        <img src="assets/img/email.png" alt="Email me" width="30" height="30">
-        </a>
-
-        <a href="https://github.com/peterjps">
-        <img src="assets/img/github-mark.png" alt="Github me" width="30" height="30">
-        </a>
-
-        <a href="https://discordapp.com/users/@01_peter_">
-        <img src="assets/img/icon_clyde_black_RGB.png" alt="Discord me" width="30" height="30">
-        </a>
-
+ -->    
+        <div class="social-icons">
+          <a href="https://www.linkedin.com/in/cspeterai/">
+          <img src="assets/img/1218170_linkedin_icon.png" alt="LinkedIn profile" width="30" height="30">
+          </a>
+  
+          <a href="mailto:cspeteai@outlook.com">
+          <img src="assets/img/email.png" alt="Email me" width="30" height="30">
+          </a>
+  
+          <a href="https://github.com/peterjps">
+          <img src="assets/img/github-mark.png" alt="Github me" width="30" height="30">
+          </a>
+  
+          <a href="https://discordapp.com/users/@01_peter_">
+          <img src="assets/img/icon_clyde_black_RGB.png" alt="Discord me" width="30" height="30">
+          </a>
+          <div>
 <!--         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
