--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,7 +22,7 @@
   color: #333; /* Optional: change the color */
 }
 
-.social-icon {
+.social-icons {
     width: 30px;  height: 30px;  margin-right: 10px; 
 }
 
