--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,17 +29,18 @@
 
 <!--         <p>{{ site.description | default: site.github.project_tagline }}</p>
  -->    
+       
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/cspeterai/">
-          <img src="assets/img/1218170_linkedin_icon.png" alt="LinkedIn profile" width="30" height="30">
+          <img src="assets/img/1218170_linkedin_icon.png" alt="LinkedIn profile" width="30" height="30" style="margin-right: 7.5px !important;">
           </a>
   
           <a href="mailto:cspeteai@outlook.com">
-          <img src="assets/img/email.png" alt="Email me" width="30" height="30">
+          <img src="assets/img/email.png" alt="Email me" width="30" height="30" style="margin-right: 7.5px !important;">
           </a>
   
           <a href="https://github.com/peterjps">
-          <img src="assets/img/github-mark.png" alt="Github me" width="30" height="30">
+          <img src="assets/img/github-mark.png" alt="Github me" width="30" height="30" style="margin-right: 7.5px !important;">
           </a>
   
           <a href="https://discordapp.com/users/@01_peter_">
