--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,9 @@
 
 <!--         <p>{{ site.description | default: site.github.project_tagline }}</p>
  -->    
-       
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/cspeterai/">
-          <img src="assets/img/1218170_linkedin_icon.png" alt="LinkedIn profile" width="30" height="30" style="margin-right: 7.5px !important;">
+          <img src="assets/img/1218170_linkedin_icon.png" alt="LinkedIn profile" width="30" height="30" style="margin-right: 7.5px !important; margin-left: 0px !important;">
           </a>
   
           <a href="mailto:cspeteai@outlook.com">
@@ -44,7 +43,7 @@
           </a>
   
           <a href="https://discordapp.com/users/@01_peter_">
-          <img src="assets/img/icon_clyde_black_RGB.png" alt="Discord me" width="30" height="30">
+          <img src="assets/img/icon_clyde_black_RGB.png" alt="Discord me" width="30" height="30" style="margin-right: 0px !important;">
           </a>
           <div>
 <!--         {% if site.github.is_project_page %}
