--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         {% if site.logo %}
-        <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" />
+        <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" style="margin-top: 0px !imoprtant; margin-bottom: 8px !important;" />
         {% endif %}
 <!--         <h1>{{ site.title }}</h1>
         <p>{{ site.description }}</p> -->
