--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -62,6 +62,11 @@ body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
+#theme-toggle img {
+  width: 24px;  /* Adjust this value to make the icons smaller or larger */
+  height: 24px; /* Adjust this value to make the icons smaller or larger */
+}
+
 body {
   padding: 50px; /* Adjust the padding around the body content */
 }
