--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -68,6 +68,12 @@ body {
 #theme-toggle:hover {
   background-color: rgba(0, 0, 0, 0.1); /* Example background color on hover */
 }
+
+.header {
+    display: flex;  /* Enables Flexbox layout */
+    align-items: center;  /* Aligns elements vertically */
+}
+
 body {
   padding: 50px; /* Adjust the padding around the body content */
 }
