--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -72,6 +72,7 @@ body {
 .header {
     display: flex;  /* Enables Flexbox layout */
     align-items: center;  /* Aligns elements vertically */
+    width: 50%;
 }
 
 body {
