--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
      -->
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
   </head>
-<!--   <body style='margin-left: 500px !important;'>
-     -->
+  <body style='margin-left: 500px !important;'>
+    
     <button id="theme-toggle" class="theme-toggle">
       <img src="{{ '/assets/img/light-mode.png' | relative_url }}" id="light-icon" style="display: none;" alt="Light Mode Icon">
       <img src="{{ '/assets/img/night-mode.png' | relative_url }}" id="dark-icon" alt="Dark Mode Icon">
