--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
   
           <a href="https://github.com/peterjps">
           <img src="assets/img/github-mark.png" alt="Github me" width="30" height="30" style="margin-right: 7.5px !important;">
+          <img id="dark-github" src="assets/img/github-mark-white.png" alt="Github me (dark mode)" width="30" height="30" style="margin-right: 7.5px !important; margin-left: 0px !important; display: none;">
           </a>
   
           <a href="https://discordapp.com/users/@01_peter_">
