--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
           </a>
   
           <a href="mailto:cspeteai@outlook.com">
-          <img id="light-email" src="assets/img/email-white.png" alt="Email me" width="30" height="30" style="margin-right: 7.5px !important;">
-          <img id="dark-email" src="assets/img/email-black.png" alt="Email me (dark mode)" width="30" height="30" style="margin-right: 7.5px !important;">
+          <img id="light-email" src="assets/img/email-black.png" alt="Email me" width="30" height="30" style="margin-right: 7.5px !important;">
+          <img id="dark-email" src="assets/img/email-white.png" alt="Email me (dark mode)" width="30" height="30" style="margin-right: 7.5px !important;">
           </a>
   
           <a href="https://github.com/peterjps">
