--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -76,7 +76,7 @@ body {
 }
 
 .light-text {
-    color: #000;  /* Replace with your desired text color for light mode */
+    color: #f3f4f6;  /* Replace with your desired text color for light mode */
 }
 
 body {
