--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,9 +81,9 @@
         margin-right: 300px !important;" 
       
       <section>
-        <h1 id="about" class="{{ data-theme === 'light' ? 'light-theme' : 'dark-theme' }}">About</h1> 
+        <h1 id="about" class="{{ theme === 'light' ? 'light-theme' : 'dark-theme' }}">About</h1> 
         <p>Adaptable Project Manager transitioning into Software Engineering and Machine Learning. Proven leadership in optimizing processes and driving strategic initiatives. Eager to apply strong analytical skills and embrace continuous learning to excel in tech-driven environments.</p>
-        <h2 id="projects" class="{{ data-theme === 'light' ? 'light-theme' : 'dark-theme' }}">Portfolio</h2>
+        <h2 id="projects" class="{{ theme === 'light' ? 'light-theme' : 'dark-theme' }}">Portfolio</h2>
         <p> • Mortage Repayment Calculator </p>
         <p> • Multi-AI Agent Collaboration for Financial Analysis</p>
         <p> • Github Page </p>
